--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Selamat Sore ❤</title>
-	<meta name="author" content="Wafa Rifqi Anafin">
-	<meta name="author-link" content="https://wafarifqi.com">
+	<title>Haloo Alda</title>
+	<meta name="author" content="Iqbal Nur Septiana">
+	<meta name="author-link" content="https://keita47.com">
 	<link rel="stylesheet" type="text/css" href="css/komponen.css" />
 	<link rel="stylesheet" type="text/css" href="css/animasi.css" />
 	<link rel="stylesheet" href="css/style.css">
@@ -45,7 +45,7 @@
 		</div>
 		<div class="halaman halaman-3">
 			<div class="kotak">
-				<h1 class="ml16">Wafa Rifqi Anafin</h1>
+				<h1 class="ml16">Iqbal Nur Septiana</h1>
 			</div>
 		</div>
 		<div class="halaman halaman-4">
@@ -62,30 +62,30 @@
 			<div class="kotak">
 				<h1 class="ml9">
 					<span class="text-wrapper">
-						<span class="letters">Saya Deklarasikan</span>
+						<span class="letters">Saya Dengan Hormat</span>
 					</span>
 				</h1>
 			</div>
 		</div>
 		<div class="halaman halaman-6">
 			<div class="kotak">
-				<h1 class="ml2">Bahwa Saya Sangat</h1>
+				<h1 class="ml2">Meminta Maaf karena</h1>
 			</div>
 		</div>
 
 		<div class="halaman halaman-7">
 			<div class="kotak">
 				<h1 class="ml4">
-					<span class="letters letters-1">Mencintai</span>
-					<span class="letters letters-2">Menyayangi</span>
-					<span class="letters letters-3">Anisa Aulia</span>
+					<span class="letters letters-1">Telah Mengganggu</span>
+					<span class="letters letters-2">Privasi</span>
+					<span class="letters letters-3">Pillar Emeraldayanti Putri</span>
 				</h1>
 			</div>
 		</div>
 
 		<div class="halaman halaman-8">
 			<div class="kotak">
-				<h1 class="ml12">Tetaplah Bersamaku</h1>
+				<h1 class="ml12">Dimaafin ya?❤</h1>
 			</div>
 		</div>
 
@@ -93,7 +93,7 @@
 			<div class="kotak">
 				<h1 class="ml14">
 					<span class="text-wrapper">
-						<span class="letters">Tetaplah Mencintaiku</span>
+						<span class="letters">PLEASE MAAFIN AKU, AKU MENYESAL😭</span>
 						<span class="line"></span>
 					</span>
 				</h1>
@@ -104,7 +104,7 @@
 			<div class="kotak">
 				<h1 class="ml7">
 					<span class="text-wrapper">
-						<span class="letters">I Love You ❤</span>
+						<span class="letters">Kalo dimaafin bales ke discordku❤</span>
 					</span>
 				</h1>
 			</div>
@@ -113,7 +113,7 @@
 		<div class="halaman halaman-11">
 			<div class="kotak">
 				<img src="gambar/gambar.jpg" id="gambar" style="display: none;">
-				<h1 class="ml13">Aku Sayang Kamu ❤</h1>
+				<h1 class="ml13">Gatau mau masukin apa lagi jadi aku masukin foto Xiao</h1>
 			</div>
 		</div>
 	</div>
