--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <audio id="audio" src="audio/audio.mp3"></audio>
 	<div id="ruang-halaman" class="tempat-halaman">
-	    <a href="https://github.com/wafarifki" target="_blank" class="tombolmelayang"><i class="fab fa-github"></i></a>
+	    <a href="https://github.com/Keita47" target="_blank" class="tombolmelayang"><i class="fab fa-github"></i></a>
 		<div class="halaman halaman-1">
 			<div class="kotak">
 				<h1 class="ml1">
@@ -53,7 +53,7 @@
 				<h1 class="ml11">
 					<span class="text-wrapper">
 						<span class="line line1"></span>
-						<span class="letters">Sore Ini</span>
+						<span class="letters">Hari Ini, Di jam Ini, Detik Ini</span>
 					</span>
 				</h1>
 			</div>
@@ -69,7 +69,7 @@
 		</div>
 		<div class="halaman halaman-6">
 			<div class="kotak">
-				<h1 class="ml2">Meminta Maaf karena</h1>
+				<h1 class="ml2">Meminta Maaf Karena</h1>
 			</div>
 		</div>
 
@@ -93,7 +93,7 @@
 			<div class="kotak">
 				<h1 class="ml14">
 					<span class="text-wrapper">
-						<span class="letters">PLEASE MAAFIN AKU, AKU MENYESAL😭</span>
+						<span class="letters">PLEASE MAAFIN AKU, AKU MENYESAL:(</span>
 						<span class="line"></span>
 					</span>
 				</h1>
@@ -104,7 +104,7 @@
 			<div class="kotak">
 				<h1 class="ml7">
 					<span class="text-wrapper">
-						<span class="letters">Kalo dimaafin bales ke discordku❤</span>
+						<span class="letters">Reply ke discordku ya kalau dimaafin❤</span>
 					</span>
 				</h1>
 			</div>
@@ -113,7 +113,7 @@
 		<div class="halaman halaman-11">
 			<div class="kotak">
 				<img src="gambar/gambar.jpg" id="gambar" style="display: none;">
-				<h1 class="ml13">Gatau mau masukin apa lagi jadi aku masukin foto Xiao</h1>
+				<h1 class="ml13">Gatau mau masukin apa lagi jadi ku masukin foto Xiao aja</h1>
 			</div>
 		</div>
 	</div>
